refactor: simplify test code formatting in various test classes